--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,24 @@
-@media (max-width: 1120px) {}
+@media (max-width: 1320px) {
+    .img-fluid {
+        margin-left: 0px;
+    }
+    .hero_img-container {
+        margin-left: 0px;
+        width: 65%;
+    }
+}
+
+/* @media (min-width: 1181px){
+    .img-fluid {
+        margin-left: 0px;
+    }
+    .hero_img-container {
+        margin-left: 0px;
+        width: 65%;
+    }
+} */
+
+/* @media (min-width: 1181px) */
 
 @media (max-width: 992px) {
 
@@ -16,13 +36,12 @@
     }
 
     .subscribe_container{
-        margin-left: 7px;
+        margin-left: 10px;
         text-align: center;
         margin-bottom: 5px;
     }
 
     .aboutus{
-        margin-left: 7px;
         text-align: center;
         margin-bottom: 5px;
     }
@@ -38,6 +57,7 @@
 
     .hero-container.container {
         padding-top: 45px;
+        padding-bottom: 600px;
     }
 
     .custom_nav-container.navbar-expand-lg .navbar-nav .nav-link {
@@ -61,6 +81,11 @@
 
     .top_container::after {
         display: none;
+    }
+
+    .hero-container.container {
+        padding-top: 45px;
+        padding-bottom: 200px;
     }
 
     .top_container::before {
