--- a/css/style.css
+++ b/css/style.css
@@ -617,6 +617,8 @@ a:focus {
   width: 225px;
   height: 40px;
   padding: 10px;
+  border: 2px solid #6EBCA8;
+  border-radius: 5px;
 }
 
 .info_section .form_container input::placeholder {
@@ -624,7 +626,7 @@ a:focus {
 }
 
 .info_section .form_container button {
-  background-color: #fdd31d;
+  background-color: #6EBCA8;
   border: none;
   outline: none;
   color: #fff;
